Adicionando mais probabilidades

--- a/pixar_films_dataset.ipynb
+++ b/pixar_films_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnNPJPCmLEkuSADlBiJYY1",
+      "authorship_tag": "ABX9TyPpp8M6/lUpNBY2XFyuX+VC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "u2Bsc7o7iywc"
       },
@@ -52,7 +52,7 @@
         "id": "ek1QXeo3jBTR",
         "outputId": "83fe1a9a-1abb-4cbd-eae5-11994276eab0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -280,7 +280,7 @@
         "id": "g1fv4lzXjWXl",
         "outputId": "653fa60c-4060-4da7-f49e-d06001db2fc5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,6 +436,51 @@
     {
       "cell_type": "code",
       "source": [
+        "# probabilidade simples de um filme ter nota superior a 8 no IMDB\n",
+        "total_filmes = len(data)\n",
+        "maior = sum(1 for score in data['imdb_score'] if score > 8)\n",
+        "probabilidade_imdb = maior/total_filmes\n",
+        "print(f\"Probabilidade de um filme ter IMDB > 8: {probabilidade_imdb}\")"
+      ],
+      "metadata": {
+        "id": "NLjGfc93M3Nh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# probabilidade simples de um filme ter nota superior a 9 no IMDB\n",
+        "total_filmes = len(data)\n",
+        "maior = sum(1 for score in data['imdb_score'] if score > 9)\n",
+        "probabilidade_imdb = maior/total_filmes\n",
+        "print(f\"Probabilidade de um filme ter IMDB > 9: {probabilidade_imdb}\")"
+      ],
+      "metadata": {
+        "id": "eaO3fDyLM7i3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# probabilidade simples de um filme ter nota inferior ou igual a 5 no IMDB\n",
+        "total_filmes = len(data)\n",
+        "maior = sum(1 for score in data['imdb_score'] if score <= 5)\n",
+        "probabilidade_imdb = maior/total_filmes\n",
+        "print(f\"Probabilidade de um filme ter IMDB <= 5: {probabilidade_imdb}\")"
+      ],
+      "metadata": {
+        "id": "y-wgNh-VPwf7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# probabilidade simples de um filme ser classificado como PG\n",
         "total_filmes = len(data)\n",
         "filmes_pg = sum(1 for rating in data['film_rating'] if rating == \"PG\")\n",
@@ -492,6 +537,51 @@
     {
       "cell_type": "code",
       "source": [
+        "# Probabilidade de quantos filmes têm Rotten Tomatoes Score maior que 80\n",
+        "filmes_rotten_maior_80 = sum(1 for score in data['rotten_tomatoes_score'] if score > 80)\n",
+        "prob_rotten = filmes_rotten_maior_80 / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter Rotten Tomatoes Score > 80: {prob_rotten}\")"
+      ],
+      "metadata": {
+        "id": "FeHBGfVdNfAd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de quantos filmes têm Rotten Tomatoes Score maior que 90\n",
+        "filmes_rotten_maior_90 = sum(1 for score in data['rotten_tomatoes_score'] if score > 90)\n",
+        "prob_rotten = filmes_rotten_maior_90 / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter Rotten Tomatoes Score > 90: {prob_rotten}\")"
+      ],
+      "metadata": {
+        "id": "ueUwOWBLNmMs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probabilidade de quantos filmes têm Rotten Tomatoes Score menor que 70\n",
+        "filmes_rotten_menor_70 = sum(1 for score in data['rotten_tomatoes_score'] if score < 70)\n",
+        "prob_rotten = filmes_rotten_menor_70 / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter Rotten Tomatoes Score < 70: {prob_rotten}\")"
+      ],
+      "metadata": {
+        "id": "ogf6P0fGNvlk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Probabilidade simples dos filmes terem orçamento acima de 50M\n",
         "filmes_orcamento_maior_50M = sum(1 for budget in data['budget'] if budget > 50000000)\n",
         "prob_orcamento = filmes_orcamento_maior_50M / total_filmes\n",
@@ -519,13 +609,28 @@
     {
       "cell_type": "code",
       "source": [
+        "# Probabilidade simples dos filmes terem orçamento acima de 100M\n",
+        "filmes_orcamento_maior_100M = sum(1 for budget in data['budget'] if budget > 100000000)\n",
+        "prob_orcamento = filmes_orcamento_maior_100M / total_filmes\n",
+        "\n",
+        "print(f\"Probabilidade de um filme ter orçamento > 100M: {prob_orcamento}\")"
+      ],
+      "metadata": {
+        "id": "7-Qsbt8SN9PA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Número de filmes com Metacritic score inferior a 7\n",
         "filmes_metacritics = len(data[data['metacritic_score'] < 7])\n",
         "\n",
         "# Probabilidade de ter Metacritic < 7\n",
         "prob_metacritic = filmes_metacritics / total_filmes\n",
         "\n",
-        "print(f'A probabilidade de um filme ter Metacritic menor que 7 é de: {round(prob_metacritic * 100, 4)}%')\n"
+        "print(f'A probabilidade de um filme ter Metacritic < 7 é de: {round(prob_metacritic * 100, 4)}%')\n"
       ],
       "metadata": {
         "colab": {
@@ -1069,7 +1174,7 @@
         "id": "JFagifmvE_6Q",
         "outputId": "471dcc81-5698-4a31-9a7b-fe2029bb8ced"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,7 +1213,7 @@
         "id": "OlQby1OyMPQj",
         "outputId": "c444e212-7e7e-45a8-ea8c-b45fcda03993"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1268,7 @@
         "id": "BYJJHdHkWM7V",
         "outputId": "9a66db50-8bdd-4a4b-e3be-129ebbeb0421"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
